--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "jsonwebtoken": "^8.5.1",
     "mockdate": "^3.0.2",
     "nanoid": "^3.1.5",
-    "next": "^9.4.0",
+    "next": "^12.0.7",
     "node-lambda-authorizer": "LBHackney-IT/node-lambda-authorizer.git#0fe9e7514882c8ffb4182fa984ee10b99bfd886c",
     "notifications-node-client": "^4.7.3",
     "objects-to-csv": "^1.3.6",
     "pg-promise": "^10.5.6",
-    "react": "16.13.1",
+    "react": "^17.0.2",
     "react-beforeunload": "^2.2.1",
-    "react-dom": "16.13.1",
+    "react-dom": "^17.0.2",
     "react-hook-form": "^5.7.2",
     "react-table": "^7.2.0",
     "restana": "^4.3.4",
