Add checkout before the deploy step.
Co-authored-by: Miles Alford <43789512+Miles-Alford@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,7 @@ jobs:
     executor: aws-cli/default
     steps:
       - *attach_workspace
+      - checkout
       - run:
           name: deploy
           command: yarn build && yarn --production=true && sudo npm i -g serverless && sls deploy --stage staging
@@ -33,6 +34,7 @@ jobs:
 
     steps:
       - *attach_workspace
+      - checkout
       - run:
           name: deploy
           command: yarn build && yarn --production=true && sudo npm i -g serverless && sls deploy --stage production
