Split the serverless install and deployment into separate steps.
Co-authored-by: Miles Alford <43789512+Miles-Alford@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,18 +26,23 @@ jobs:
       - checkout
       - run:
           name: deploy
-          command: sudo npm i -g serverless && sls deploy --stage staging
+          command: sudo npm i -g serverless
+      - run:
+          name: deploy
+          command: sls deploy --stage staging
           no_output_timeout: 45m
 
   build-deploy-production:
     executor: aws-cli/default
-
     steps:
       - *attach_workspace
       - checkout
       - run:
           name: deploy
-          command: sudo npm i -g serverless && sls deploy --stage production
+          command: sudo npm i -g serverless
+      - run:
+          name: deploy
+          command: sls deploy --stage production
           no_output_timeout: 45m
 
   assume-role-staging:
