Cap serverless to v3 for licensing purposes.
Co-authored-by: Miles Alford <43789512+Miles-Alford@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       - checkout
       - run:
           name: deploy
-          command: sudo npm i -g serverless
+          command: sudo npm i -g serverless@^3
       - run:
           name: deploy
           command: sls deploy --stage staging
@@ -39,7 +39,7 @@ jobs:
       - checkout
       - run:
           name: deploy
-          command: sudo npm i -g serverless
+          command: sudo npm i -g serverless@^3
       - run:
           name: deploy
           command: sls deploy --stage production
