--- a/serverless.yml
+++ b/serverless.yml
@@ -58,7 +58,7 @@ resources:
         DBInstanceIdentifier: "${self:service}-db-${self:provider.stage}"
         DBInstanceClass: "db.t2.small"
         DBName: ${self:provider.dbname}
-        DeletionProtection: true
+        DeletionProtection: false
         Engine: "postgres"
         EngineVersion: "11.7"
         MasterUsername: ${env:MASTER_USERNAME}
