Change RDS delete policy to 'delete' as we already have the manual snapshot.

--- a/serverless.yml
+++ b/serverless.yml
@@ -74,7 +74,7 @@ resources:
           -
             Key: "Name"
             Value: "additionalRestrictionsGrantsDb"
-      DeletionPolicy: "Snapshot"
+      DeletionPolicy: Delete
 
 custom:
   bucket: ${self:service}-supporting-documents-${self:provider.stage}
