--- a/serverless.yml
+++ b/serverless.yml
@@ -45,11 +45,11 @@ resources:
       Type: AWS::EC2::SecurityGroup
       Properties:
         GroupDescription: Allow internal VPC
-        SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: '5432'
-          ToPort: '5432'
-          CidrIp: 172.31.0.0/16
+        # SecurityGroupIngress:
+        # - IpProtocol: tcp
+        #   FromPort: '5432'
+        #   ToPort: '5432'
+        #   CidrIp: 172.31.0.0/16
 
     additionalRestrictionsGrantDb:
       Type: AWS::RDS::DBInstance
@@ -66,10 +66,10 @@ resources:
         MultiAZ: true
         PubliclyAccessible: false
         StorageEncrypted: true
-        VPCSecurityGroups:
-        - Fn::GetAtt:
-          - additionalRestrictionsGrantDbSecurityGroup
-          - GroupId
+        # VPCSecurityGroups:
+        # - Fn::GetAtt:
+        #   - additionalRestrictionsGrantDbSecurityGroup
+        #   - GroupId
         Tags:
           -
             Key: "Name"
