Added 'Retain' Deletion Policy for the supporting documents S3 bucket.
Co-authored-by: Miles Alford <43789512+Miles-Alford@users.noreply.github.com>

--- a/serverless.yml
+++ b/serverless.yml
@@ -17,6 +17,7 @@ resources:
   Resources:
     additionalRestrictionsGrantSupportingDocumentsBucket:
         Type: AWS::S3::Bucket
+        DeletionPolicy: Retain
         Properties:
           BucketName: ${self:custom.bucket}
           PublicAccessBlockConfiguration:
