Modify pipeline to remove production resources instead. It will preserve the S3 bucket due to previously deployed Retain policy.
Co-authored-by: Miles Alford <43789512+Miles-Alford@users.noreply.github.com>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,11 +22,11 @@ jobs:
       - *attach_workspace
       - checkout
       - run:
-          name: deploy
+          name: install
           command: sudo npm i -g serverless@^3
       - run:
-          name: deploy
-          command: sls deploy --stage production
+          name: destroy
+          command: sls remove --stage production
           no_output_timeout: 45m
 
   assume-role-production:
